add sbb oauth config to demonstrate the invalid code when PKCE is disabled

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -25,7 +25,7 @@
 			<string>Authenticate with OAuth</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>my-ags-app</string>
+				<string>ivegdev</string>
 			</array>
 		</dict>
 	</array>
